# jolt-svelte

./: .editorconfig  .eslintrc.cjs  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  404.html  CONTRIBUTING.md  README.md  app.html  bun.lockb  flake.nix  friends.html  index.html  login.html  package.json  pnpm-lock.yaml  settings.html  shell.nix  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1691251419734-14f11517033ab.mjs
.github/workflows/: publish.yml
_app/: version.json
_app/immutable/assets/: 0.0953e516.css  0.3cefbb5c.css  0.f0021548.css  16.f4e3d8e9.css  19.6b9f6c0c.css  19.8c249289.css  2.30521cdb.css  2.82d440d8.css  2.8d132c38.css  2.a69fbf60.css  2.b90d1134.css  2.ce08c27f.css  2.eb3689f5.css  2.f33d008a.css  2.fbcd5638.css  20.261a9adc.css  21.8c1dd2f2.css  21.8d147770.css  5.8409a615.css  5.8f387826.css  5.90434083.css  5.b6e27ccf.css  6.2088a281.css  6.20f57d36.css  6.3aeb22d7.css  6.661e9ec7.css  6.c7d7eae3.css  7.f461ae65.css  8.3cd3617b.css  8.97a25765.css  Channel.cfbde9ef.css  Channel.cffb720c.css  Channel.fdb53627.css  ChannelItem.2d0daf93.css  ChannelItem.429c99b2.css  ChannelItem.5fd070f6.css  ChannelItem.b991c078.css  ChannelItem.ca202753.css  ChannelItem.ee150b2d.css  InputSetting.3bc1bce8.css  (+48 more)
_app/immutable/chunks/: Channel.07c630b1.js  Channel.4ac71bae.js  Channel.4eaf0bf3.js  Channel.4fc5768e.js  Channel.555d96b7.js  Channel.5de24245.js  Channel.6903e6ef.js  Channel.7da200c4.js  Channel.7da27cdc.js  Channel.7eb6341e.js  Channel.7fef3429.js  Channel.8297c014.js  Channel.898e8c8c.js  Channel.9037f37b.js  Channel.938c66ce.js  Channel.94311b1b.js  Channel.999c3df7.js  Channel.9dd4a37f.js  Channel.a355e92b.js  Channel.a65355d1.js  Channel.b2760298.js  Channel.b37d7ceb.js  Channel.bdde91a1.js  Channel.c3ed636c.js  Channel.c613089d.js  Channel.c9c419cd.js  Channel.cf8dc340.js  Channel.d0ff7e94.js  Channel.d6eef2eb.js  Channel.d7285495.js  Channel.d9531578.js  Channel.e2323155.js  Channel.e2601a62.js  Channel.e31db1c4.js  Channel.e8c3602a.js  Channel.efb55e43.js  Channel.fb7385b5.js  Channel.fc02a8e6.js  ChannelItem.1dd92b36.js  ChannelItem.41a79828.js  (+398 more)
locale/: ar.json  en_US.json  it.json
servers/: create.html
settings/: account.html  appearence.html  sessions.html  text.html
src/: 404.html  App.svelte  app.html  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fetch.rs  login.rs  macros.rs  main.rs  websocket.rs  ws.rs
src-tauri/src/events/: typing.rs
src-tauri/src/routes/: channels.rs  macros.rs  members.rs  message.rs  mod.rs  servers.rs  session.rs  users.rs
src/components/: ArrayFind.svelte  ChannelFetcher.svelte  ChannelFinder.svelte  ExternalLink.svelte  Member.svelte  MembersList.svelte  MembersListFetcher.svelte  Modal.svelte  RoundedImage.svelte  ServerSidebarIcon.svelte  SessionView.svelte  Setting.svelte  Settings.svelte  UserDetail.svelte  UserFetcher.svelte  UserProfilePicture.svelte
src/lib/: channel.d.ts  context.ts  contextKeys.ts  emoji.d.ts  fetcher.ts  helpers.ts  i18n.ts  index.css  index.d.ts  message.d.ts  payload.d.ts  payloads.d.ts  server.d.ts  session.d.ts  settings.d.ts  stores.ts  user.d.ts  util.ts
src/routes/: +layout.svelte  +layout.ts  context.ts
(+769 files in other folders)
