[package]
name = "jolt"
version = "0.2.4"
description = "A Tauri App"
authors = ["vloddot (vladpriwalov08@gmail.com)"]
license = "Apache-2.0"
repository = "https://www.github.com/vloddot/jolt"
default-run = "jolt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
futures-util = "0.3.28"
tokio-tungstenite = "0.20.0"
reywen = "0.1.20"

[dependencies.tauri]
version = "1.4.1"
features = [
  "fs-write-file",
  "fs-read-file",
  "fs-exists",
  "devtools",
  "windows7-compat",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
