[package]
name = "jolt"
version = "0.3.2"
description = "Tauri binary for the Jolt app."
authors = ["vloddot (vladpriwalov08@gmail.com)"]
keywords = ["revolt", "custom-client", "rust", "svelte", "tauri", "chatapp"]
license = "Apache-2.0"
repository = "https://www.github.com/vloddot/jolt"
default-run = "jolt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.tauri-build]
version = "1.4.0"
features = []

[dependencies.tauri]
version = "1.4.1"
features = ["shell-open", "devtools", "windows7-compat"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
